--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "webpack-bundle-analyzer": "^3.0.3",
-    "semantic-release": "^15.13.3"
+    "semantic-release": "^15.13.3",
+    "webpack-bundle-analyzer": "^3.0.3"
   },
   "main": "gatsby-config.js"
 }
