--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
     "semantic-release": "semantic-release"
   },
+  "peerDependencies": {
+    "gatsby": "^2.0.91",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1"
+  },
   "dependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@emotion/core": "^10.0.6",
@@ -21,7 +26,6 @@
     "algoliasearch": "^3.32.0",
     "axios": "^0.18.0",
     "dotenv": "^6.2.0",
-    "gatsby": "^2.0.91",
     "gatsby-image": "^2.0.17",
     "gatsby-mdx": "^0.3.5",
     "gatsby-plugin-algolia": "^0.3.0",
@@ -48,8 +52,6 @@
     "lodash-webpack-plugin": "^0.11.4",
     "lodash.template": "^4.4.0",
     "prop-types": "^15.6.0",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
     "react-instantsearch-dom": "^5.3.2",
@@ -60,6 +62,9 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "gatsby": "^2.0.91",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
     "semantic-release": "^15.13.3",
     "webpack-bundle-analyzer": "^3.0.3"
   },
