--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-theme-jason-blog",
-  "version": "0.0.0-development",
+  "version": "0.0.0",
   "author": "Jason Lengstorf <jason@gatsbyjs.com>",
   "repository": "git@github.com:jlengstorf/gatsby-theme-jason-blog.git",
   "license": "MIT",
@@ -12,7 +12,8 @@
     "semantic-release": "semantic-release"
   },
   "peerDependencies": {
-    "gatsby": "^2.0.91",
+    "dotenv": "^6.2.0",
+    "gatsby": "^2.2.0-alpha.6",
     "react": "^16.8.0",
     "react-dom": "^16.8.0"
   },
@@ -20,37 +21,35 @@
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
-    "@mdx-js/mdx": "^0.19.0",
-    "@mdx-js/tag": "^0.18.0",
+    "@mdx-js/mdx": "^0.20.3",
+    "@mdx-js/tag": "^0.20.3",
     "@reach/router": "^1.2.1",
     "algoliasearch": "^3.32.0",
     "axios": "^0.18.0",
-    "dotenv": "^6.2.0",
     "gatsby-image": "^2.0.17",
     "gatsby-mdx": "^0.4.0",
-    "gatsby-plugin-algolia": "^0.3.0",
-    "gatsby-plugin-amplitude-analytics": "^1.3.0",
     "gatsby-plugin-catch-links": "^2.0.5",
+    "gatsby-plugin-compile-es6-packages": "^1.0.6",
     "gatsby-plugin-emotion": "^4.0.1",
-    "gatsby-plugin-manifest": "^2.0.6",
-    "gatsby-plugin-offline": "^2.0.9",
     "gatsby-plugin-page-creator": "^2.0.6",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.0.8",
     "gatsby-plugin-twitter": "^2.0.6",
+    "gatsby-remark-code-titles": "^1.1.0-rc.0",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^3.0.0",
     "gatsby-remark-numbered-footnotes": "^1.0.0",
+    "gatsby-remark-prismjs": "^3.2.4",
     "gatsby-remark-responsive-iframe": "^2.0.5",
     "gatsby-remark-smartypants": "^2.0.5",
-    "gatsby-source-airtable": "^2.0.2",
     "gatsby-source-filesystem": "^2.0.5",
     "gatsby-transformer-remark": "^2.1.9",
     "gatsby-transformer-sharp": "^2.1.5",
     "lodash": "^4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
     "lodash.template": "^4.4.0",
+    "prismjs": "^1.15.0",
+    "prism-theme-night-owl": "^1.0.1",
     "prop-types": "^15.6.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
@@ -62,7 +61,8 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "gatsby": "^2.0.91",
+    "dotenv": "^6.2.0",
+    "gatsby": "^2.2.0-alpha.6",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "semantic-release": "^15.13.3",
