fix: upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -21,15 +21,14 @@
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
-    "@mdx-js/mdx": "^0.20.3",
-    "@mdx-js/tag": "^0.20.3",
+    "@mdx-js/mdx": "^1.0.20",
+    "@mdx-js/react": "^1.0.20",
     "@reach/router": "^1.2.1",
     "algoliasearch": "^3.32.0",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "gatsby-image": "^2.0.17",
-    "gatsby-mdx": "^0.4.0",
+    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-catch-links": "^2.0.5",
-    "gatsby-plugin-compile-es6-packages": "^1.0.6",
     "gatsby-plugin-emotion": "^4.0.1",
     "gatsby-plugin-page-creator": "^2.0.6",
     "gatsby-plugin-react-helmet": "^3.0.0",
@@ -54,14 +53,14 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
     "react-instantsearch-dom": "^5.3.2",
-    "react-transition-group": "^2.2.1",
+    "react-transition-group": "^4.1.0",
     "remark-numbered-footnotes": "^1.0.1",
     "retext": "^6.0.1",
-    "url-search-params-polyfill": "^5.0.0",
+    "url-search-params-polyfill": "^6.0.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "dotenv": "^7.0.0",
+    "dotenv": "^8.0.0",
     "gatsby": "^2.2.0-alpha.6",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
