--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "algoliasearch": "^3.32.0",
     "axios": "^0.19.0",
     "gatsby-image": "^2.0.17",
-    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-catch-links": "^2.0.5",
     "gatsby-plugin-emotion": "^4.0.1",
+    "gatsby-plugin-mdx": "^1.0.5",
     "gatsby-plugin-page-creator": "^2.0.6",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.8",
