--- a/package.json
+++ b/package.json
@@ -18,57 +18,57 @@
     "react-dom": "^16.8.0"
   },
   "dependencies": {
-    "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@emotion/core": "^10.0.6",
-    "@emotion/styled": "^10.0.6",
-    "@mdx-js/mdx": "^1.0.20",
-    "@mdx-js/react": "^1.0.20",
+    "@babel/plugin-proposal-export-default-from": "^7.7.4",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
+    "@mdx-js/mdx": "^1.5.2",
+    "@mdx-js/react": "^1.5.2",
     "@reach/router": "^1.2.1",
-    "algoliasearch": "^3.32.0",
+    "algoliasearch": "^3.35.1",
     "axios": "^0.19.0",
-    "gatsby-image": "^2.0.17",
-    "gatsby-plugin-catch-links": "^2.0.5",
-    "gatsby-plugin-emotion": "^4.0.1",
-    "gatsby-plugin-mdx": "^1.0.5",
-    "gatsby-plugin-page-creator": "^2.0.6",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.8",
-    "gatsby-plugin-twitter": "^2.0.6",
-    "gatsby-remark-code-titles": "^1.1.0-rc.0",
-    "gatsby-remark-copy-linked-files": "^2.0.5",
-    "gatsby-remark-images": "^3.0.0",
-    "gatsby-remark-numbered-footnotes": "^1.0.0",
-    "gatsby-remark-prismjs": "^3.2.4",
-    "gatsby-remark-responsive-iframe": "^2.0.5",
-    "gatsby-remark-smartypants": "^2.0.5",
-    "gatsby-source-filesystem": "^2.0.5",
-    "gatsby-transformer-remark": "^2.1.9",
-    "gatsby-transformer-sharp": "^2.1.5",
-    "lodash": "^4.17.4",
-    "lodash-webpack-plugin": "^0.11.4",
-    "lodash.template": "^4.4.0",
-    "prism-theme-night-owl": "^1.0.1",
-    "prismjs": "^1.15.0",
-    "prop-types": "^15.6.0",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.2.2",
-    "react-instantsearch-dom": "^5.3.2",
-    "react-transition-group": "^4.1.0",
-    "remark-numbered-footnotes": "^1.0.1",
-    "retext": "^6.0.1",
+    "gatsby-image": "^2.2.37",
+    "gatsby-plugin-catch-links": "^2.1.21",
+    "gatsby-plugin-emotion": "^4.1.18",
+    "gatsby-plugin-mdx": "^1.0.63",
+    "gatsby-plugin-page-creator": "^2.1.36",
+    "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby-plugin-sharp": "^2.3.9",
+    "gatsby-plugin-twitter": "^2.1.17",
+    "gatsby-remark-code-titles": "^1.1.0",
+    "gatsby-remark-copy-linked-files": "^2.1.33",
+    "gatsby-remark-images": "^3.1.38",
+    "gatsby-remark-numbered-footnotes": "^1.0.1",
+    "gatsby-remark-prismjs": "^3.3.27",
+    "gatsby-remark-responsive-iframe": "^2.2.30",
+    "gatsby-remark-smartypants": "^2.1.19",
+    "gatsby-source-filesystem": "^2.1.42",
+    "gatsby-transformer-remark": "^2.6.44",
+    "gatsby-transformer-sharp": "^2.3.9",
+    "lodash": "^4.17.15",
+    "lodash-webpack-plugin": "^0.11.5",
+    "lodash.template": "^4.5.0",
+    "prism-theme-night-owl": "^1.2.0",
+    "prismjs": "^1.17.1",
+    "prop-types": "^15.7.2",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.8.0",
+    "react-instantsearch-dom": "^5.7.0",
+    "react-transition-group": "^4.3.0",
+    "remark-numbered-footnotes": "^1.1.0",
+    "retext": "^6.0.2",
     "url-search-params-polyfill": "^6.0.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "dotenv": "^8.0.0",
-    "gatsby": "^2.2.0-alpha.6",
+    "dotenv": "^8.2.0",
+    "gatsby": "^2.18.14",
     "husky": "^3.1.0",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "semantic-release": "^15.13.3",
-    "webpack-bundle-analyzer": "^3.0.3"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "semantic-release": "^15.13.31",
+    "webpack-bundle-analyzer": "^3.6.0"
   },
   "main": "index.js"
 }
