--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "gatsby-theme-jason-blog",
   "version": "0.0.0",
+  "main": "index.js",
   "author": "Jason Lengstorf <jason@lengstorf.com>",
-  "repository": "git@github.com:jlengstorf/gatsby-theme-jason-blog.git",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jlengstorf/gatsby-theme-jason-blog"
+  },
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
@@ -11,40 +15,34 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
     "semantic-release": "semantic-release"
   },
-  "peerDependencies": {
-    "dotenv": "^6.2.0",
-    "gatsby": "^2.2.0-alpha.6",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
-  },
   "dependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.8.3",
-    "@emotion/core": "^10.0.27",
+    "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@mdx-js/mdx": "^1.5.5",
-    "@mdx-js/react": "^1.5.5",
-    "@reach/router": "^1.3.1",
+    "@mdx-js/mdx": "^1.5.8",
+    "@mdx-js/react": "^1.5.8",
+    "@reach/router": "^1.3.3",
     "algoliasearch": "^3.35.1",
     "axios": "^0.19.2",
-    "gatsby-image": "^2.2.40",
-    "gatsby-plugin-catch-links": "^2.1.25",
-    "gatsby-plugin-emotion": "^4.1.22",
-    "gatsby-plugin-mdx": "^1.0.70",
-    "gatsby-plugin-page-creator": "^2.1.40",
-    "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-sharp": "^2.4.5",
-    "gatsby-plugin-twitter": "^2.1.19",
+    "gatsby-image": "^2.3.1",
+    "gatsby-plugin-catch-links": "^2.2.1",
+    "gatsby-plugin-emotion": "^4.2.1",
+    "gatsby-plugin-mdx": "^1.1.4",
+    "gatsby-plugin-page-creator": "^2.2.1",
+    "gatsby-plugin-react-helmet": "^3.2.1",
+    "gatsby-plugin-sharp": "^2.5.3",
+    "gatsby-plugin-twitter": "^2.2.1",
     "gatsby-remark-code-titles": "^1.1.0",
-    "gatsby-remark-copy-linked-files": "^2.1.37",
-    "gatsby-remark-embedder": "^1.11.1",
-    "gatsby-remark-images": "^3.1.44",
+    "gatsby-remark-copy-linked-files": "^2.2.1",
+    "gatsby-remark-embedder": "^2.0.0",
+    "gatsby-remark-images": "^3.2.1",
     "gatsby-remark-numbered-footnotes": "^1.0.1",
-    "gatsby-remark-prismjs": "^3.3.31",
-    "gatsby-remark-responsive-iframe": "^2.2.32",
-    "gatsby-remark-smartypants": "^2.1.21",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-remark": "^2.6.50",
-    "gatsby-transformer-sharp": "^2.3.14",
+    "gatsby-remark-prismjs": "^3.4.1",
+    "gatsby-remark-responsive-iframe": "^2.3.1",
+    "gatsby-remark-smartypants": "^2.2.1",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-remark": "^2.7.1",
+    "gatsby-transformer-sharp": "^2.4.3",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.5",
     "lodash.template": "^4.5.0",
@@ -62,14 +60,24 @@
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
-    "gatsby": "^2.19.12",
-    "husky": "^3.1.0",
-    "prettier": "1.19.1",
+    "gatsby": "^2.20.9",
+    "husky": "^4.2.3",
+    "prettier": "2.0.2",
     "pretty-quick": "^2.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "semantic-release": "^17.0.2",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "semantic-release": "^17.0.4",
+    "webpack-bundle-analyzer": "^3.6.1"
   },
-  "main": "index.js"
+  "peerDependencies": {
+    "dotenv": "^8.2.0",
+    "gatsby": "^2.20.0",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0"
+  },
+  "engines": {
+    "node": ">=10.13.0",
+    "npm": ">=6",
+    "yarn": ">=1"
+  }
 }
